--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
     <link rel="amphtml" href="https://super-gacor.online/portal/slot-gacor/">
-    <link rel="canonical" href="http://ftp.geeksoflondon.com/">
-    <meta name="google-site-verification" content="G5b_MtYq3C349HvSZmNDTu2rWxVyd7M5JhabHn_GxVU" />
+    <link rel="canonical" href="http://ftp.randychampagne.com/">
+    <meta name="google-site-verification" content="K9d6iTx2jNSj_6zOxpD-H9GG-q3KqOKj7kItYc31nh4" />
     <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
     <title>VEGAS168 Terbaru Daftar Akun Vip Slot VEGAS168 Mudah Maxwin</title>
     <meta name="description" content="VEGAS168 Daftar Akun Gacor Vip Terpercaya Hari Ini, Situs VEGAS168 Hadir Dengan Permainan Terlengkap Terbaik Mudah Meraih Maxwin Slot Online No 1 Di Indonesia Bergabung Sekarang Juga Daftar Kan Akun Vip Kamu Bersama Web VEGAS168">
     <meta property="og:site_name" content="vegas168">
-    <meta property="og:url" content="http://ftp.geeksoflondon.com/">
+    <meta property="og:url" content="http://ftp.randychampagne.com/">
     <meta property="og:title" content="VEGAS168 Terbaru Daftar Akun Vip Slot VEGAS168 Mudah Maxwin">
     <meta property="og:type" content="product">
     <meta name="language" content="ID">
@@ -1803,7 +1803,7 @@ Item added to your cart
           type="text"
           class="field__input"
           id="ShareUrl-template--16345839042760__main"
-          value="http://ftp.geeksoflondon.com/"
+          value="http://ftp.randychampagne.com/"
           placeholder="Link"
           onclick="this.select();"
           readonly
@@ -1943,7 +1943,7 @@ Item added to your cart
       "@context": "http://schema.org/",
       "@type": "Product",
       "name": "VEGAS168 Terbaru Daftar Akun Vip Slot VEGAS168 Mudah Maxwin",
-      "url": "http://ftp.geeksoflondon.com/",
+      "url": "http://ftp.randychampagne.com/",
       "image": [
           "https:\/\/idnslot-resmi.eagleeyes.com\/cdn\/shop\/files\/idnslot.png?v=1702402918\u0026width=1920"
         ],
@@ -2137,7 +2137,7 @@ Item added to your cart
     </ul>
 
     <script>
-      window.shopUrl = 'http://ftp.geeksoflondon.com/';
+      window.shopUrl = 'http://ftp.randychampagne.com/';
       window.routes = {
         cart_add_url: '/cart/add',
         cart_change_url: '/cart/change',
